# spmd-vectorize-benchmarks

./: .gitignore  Makefile  TODO.txt  analyse.py  bench.py  harness.cpp
_rust_aggregate/: Cargo.toml  Makefile  nyuzi-elf-none.json
_rust_aggregate/src/: lib.rs
_rust_support/src/: lib.rs
fib/: Cargo.toml
fib/src/: lib.rs
fwt/: Cargo.toml  build.rs
fwt/src/: lib.rs
hash/: Makefile  hash.cpp
mandelbrot/: Makefile  mandelbrot.cpp
nbody/: Cargo.toml  build.rs
nbody/src/: lib.rs
rust_nyuzi_staticlib/: Cargo.toml
rust_nyuzi_staticlib/src/: lib.rs
rust_nyuzi_support/: Cargo.toml
rust_nyuzi_support/src/: lib.rs
